# spume

./: Cargo.toml  README.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
examples/leptos-slot-monitor/: Cargo.toml  README.md  index.html
examples/leptos-slot-monitor/src/: main.rs
src/: lib.rs  methods.rs  provider.rs  pubsub_methods.rs  pubsub_provider.rs
tests/: integration.rs
