[package]
name = "spume"
version = "0.2.0"
edition = "2024"
description = "Lightweight, ergonomic Solana JSON-RPC wasm client"
license = "Apache-2.0"
repository = "https://github.com/aursen-labs/spume"
homepage = "https://github.com/aursen-labs/spume"
documentation = "https://docs.rs/spume"
readme = "README.md"
keywords = ["solana", "rpc", "wasm", "websocket", "json-rpc"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["rlib"]

[features]
pubsub = ["dep:wasm-bindgen-futures", "gloo-net/websocket"]

[dependencies]
futures = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-net = { version = "0.7.0", default-features = false, features = ["http", "json"] }
gloo-timers = { version = "0.4", features = ["futures"] }
serde = "1"
serde_json = "1"
solana-address = "2"
solana-epoch-info = { version = "3.1", features = ["serde"] }
solana-epoch-schedule = { version = "3.1", features = ["serde"] }
solana-rpc-client-types = "=4.0.0-rc.0"
solana-transaction-status-client-types = "=4.0.0-rc.0"
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["AbortController"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
